--- a/deploy/deploy-consumer.yaml
+++ b/deploy/deploy-consumer.yaml
@@ -16,8 +16,6 @@ spec:
     spec:
       containers:
         - name: pulsar-consumer
-          image: ghcr.io/pulsar-sigs/pulsar-client:v0.1.0
+          image: ghcr.io/pulsar-sigs/pulsar-client:v0.1.1
           imagePullPolicy: IfNotPresent
-          # command:
-          #   - receive
-          args: ["consumer","--broker","pulsar://pulsar.default","--topic","keda","--subscription-name","scaler"]
+          args: ["consumer","--broker","pulsar://pulsar.default:6650","--topic","persistent://public/default/keda","--subscription-name","keda","--consume-time","200"]
