--- a/deploy/pulsar.yaml
+++ b/deploy/pulsar.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pulsar
+  namespace: default
   labels:
     app: pulsar
 spec:
@@ -18,6 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pulsar
+  namespace: default
   labels:
     app: pulsar
 spec:
