Add tls scaledobject for pulsar

--- a/deploy/deploy-consumer.yaml
+++ b/deploy/deploy-consumer.yaml
@@ -18,4 +18,4 @@ spec:
         - name: pulsar-consumer
           image: ghcr.io/pulsar-sigs/pulsar-client:v0.1.1
           imagePullPolicy: IfNotPresent
-          args: ["consumer","--broker","pulsar://pulsar.default:6650","--topic","persistent://public/default/keda","--subscription-name","keda","--consume-time","200"]
+          args: ["consumer","--broker","pulsar://pulsar-pulsar.default:6650","--topic","persistent://public/default/keda","--subscription-name","keda","--consume-time","200"]
